--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             border: 1px solid black;
             border-collapse: collapse;
         }
+        .number {
+            text-align: center;
+            padding-left: 10px;
+            padding-right: 10px;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -17,26 +23,32 @@
     <h1>나의 과제방</h1>
     <table>
         <tr>
+            <td class="number">1.</td>
             <td>day01_0716</td>
             <td><a href="./work/index0716.html">0716</a></td>
         </tr>
         <tr>
+            <td class="number">2.</td>
             <td>day02_0717</td>
             <td><a href="./work/index0717.html">0717</a></td>
         </tr>
         <tr>
+            <td class="number">3.</td>
             <td>day03_0718</td>
             <td><a href="./work/index0718.html">0718</a></td>
         </tr>
         <tr>
+            <td class="number">4.</td>
             <td>day04_0721</td>
             <td><a href="./work/index0721.html">0721</a></td>
         </tr>
         <tr>
+            <td class="number">5.</td>
             <td>day05_0722</td>
             <td><a href="./work/index0722.html">0722</a></td>
         </tr>
         <tr>
+            <td class="number">6.</td>
             <td>day06_0723</td>
             <td><a href="./work/index0723.html">0723</a></td>
         </tr>
