--- a/work/index0718.html
+++ b/work/index0718.html
@@ -35,7 +35,7 @@
     <img src="./images/mic.jpg">
     <hr>
     <h1 class="subject">연습문제2</h1>
-    <iframe src="./index0718(2).html" width="100%" height="1000" frameborder="0"></iframe>
+    <iframe src="./index0718_2.html" width="100%" height="1000" frameborder="0"></iframe>
 
 </body>
 
