--- a/work/index0722.html
+++ b/work/index0722.html
@@ -79,7 +79,7 @@
     </table>
     <hr>
     <h1 class="subject">연습문제2</h1>
-    <iframe src="./index0722(2).html" width="100%" height="1000" frameborder="0"></iframe>
+    <iframe src="./index0722_2.html" width="100%" height="1000" frameborder="0"></iframe>
 </body>
 
 </html>
