--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         table, td, th {
             border: 1px solid black;
             border-collapse: collapse;
+            font-size: 20px;
+            padding: 3px 10px 3px;
         }
         .number {
             text-align: center;
-            padding-left: 10px;
-            padding-right: 10px;
             font-weight: bold;
         }
     </style>
