--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table, td, th {
+        table,
+        td,
+        th {
             border: 1px solid black;
             border-collapse: collapse;
             font-size: 20px;
             padding: 3px 10px 3px;
         }
+
         .number {
             text-align: center;
             font-weight: bold;
@@ -51,6 +54,11 @@
             <td class="number">6.</td>
             <td>day06_0723</td>
             <td><a href="./work/index0723.html">0723</a></td>
+        </tr>
+        <tr>
+            <td class="number">7.</td>
+            <td>day07_0724</td>
+            <td><a href="./work/index0724.html">0724</a></td>
         </tr>
     </table>
 </body>
