--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             <td>day07_0724</td>
             <td><a href="./work/index0724.html">0724</a></td>
         </tr>
+        <tr>
+            <td class="number">8.</td>
+            <td>day08_0725</td>
+            <td><a href="./work/index0725.html">0725</a></td>
+        </tr>        
     </table>
 </body>
 
