--- a/index.html
+++ b/index.html
@@ -211,18 +211,10 @@
         <div class="subject-main">
             <div class="subject-header">
                 <div class="number">9.</div>
-                <div class="date">07.28</div>
-            </div>
-            <div class="subject-title">Day 09</div>
-            <a href="" class="btn-no" onclick="nosubject()">과제 보기</a>
-        </div>
-        <div class="subject-main">
-            <div class="subject-header">
-                <div class="number">10.</div>
                 <div class="date">07.29</div>
             </div>
-            <div class="subject-title">Day 10</div>
-            <a href="" class="btn-no" onclick="nosubject()">과제 보기</a>
+            <div class="subject-title">Day 09</div>
+            <a href="./work/index0729.html" class="btn">과제 보기</a>
         </div>
         <script>
             function nosubject() {
